--- a/back-end/package.json
+++ b/back-end/package.json
@@ -7,12 +7,13 @@
     "build": "tsc"
   },
   "dependencies": {
-    "@types/express": "^4.17.21",
     "express": "^4.19.2",
     "socket.io": "^4.7.5"
   },
   "devDependencies": {
     "@types/node": "^22.5.4",
+    "@types/express": "^4.17.21",
+    "@types/uuid": "^10.0.0",
     "nodemon": "^3.1.4",
     "ts-node": "^10.9.2",
     "typescript": "^5.5.4"
