--- a/front-end/package.json
+++ b/front-end/package.json
@@ -13,6 +13,7 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "element-plus": "^2.8.2",
     "modern-normalize": "^3.0.1",
     "pinia": "^2.1.7",
     "socket.io-client": "^4.7.5",
@@ -34,6 +35,8 @@
     "prettier": "^3.2.5",
     "sass": "^1.78.0",
     "typescript": "~5.4.0",
+    "unplugin-auto-import": "^0.18.2",
+    "unplugin-vue-components": "^0.27.4",
     "vite": "^5.3.1",
     "vite-plugin-vue-devtools": "^7.3.1",
     "vue-tsc": "^2.0.21"
